--- a/SmartUnit.TestAdapter/SmartUnit.TestAdapter.csproj
+++ b/SmartUnit.TestAdapter/SmartUnit.TestAdapter.csproj
@@ -1,26 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <Nullable>enable</Nullable>
         <PackageId>SmartUnit.TestAdapter</PackageId>
-        <Version>1.2.0</Version>
+        <Version>1.0.0</Version>
         <Authors>Hosch250</Authors>
         <Company>SmartUnit</Company>
+        <DevelopmentDependency>true</DevelopmentDependency>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Moq" Version="4.16.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\SmartUnit\SmartUnit.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.TestPlatform.ObjectModel">
-            <HintPath>..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\CommonExtensions\Microsoft\TestWindow\Microsoft.VisualStudio.TestPlatform.ObjectModel.dll</HintPath>
-        </Reference>
+        <PackageReference Include="SmartUnit" Version="1.0.0" />
+        <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="16.9.1" PrivateAssets="All" />
     </ItemGroup>
 </Project>
